Change blog link

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
       { label: "LinkedIn", href: "https://linkedin.com/in/vurulkan" },
       { label: "GitHub", href: "https://github.com/vurulkan/" },
       { label: "Medium", href: "https://vurulkan.medium.com/" },
-      { label: "Blog", href: "https://vurulkan.com/blog/" }
+      { label: "Blog", href: "https://blog.vurulkan.com/" }
     ];
 
     const typewriterEl = document.getElementById("typewriter");
@@ -725,3 +725,4 @@
   </script>
 </body>
 </html>
+
